changed navbar-collapse to correct color background

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -308,7 +308,7 @@ ul {
     }
     .navbar-collapse {
 
-        background-color: @basepink;
+        background: url("../assets/images/nav_bg_paper.jpg");
     }
 }
 @media (min-width: 769px) and (max-width: 992px) {
